--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,3 +6,5 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
+<!-- Preload hero image for faster loading -->
+<link rel="preload" href="/images/hero/table-setting-3604064_960_720.jpg" as="image">
