--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
   <!-- Why Choose Us Section -->
   <section class="section why-choose-us">
     <div class="section-header">
-      <h2>Why Choose EventElegance</h2>
+      <h2>Why Choose Eventkitoko</h2>
       <p>We're dedicated to making your special events truly unforgettable</p>
     </div>
     
