--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,13 +4,13 @@ let year = d.getFullYear()
 <footer>
   <div class="footer-content">
     <div class="footer-section">
-      <h3>EventElegance</h3>
+      <h3>EventKitoko</h3>
       <p>Making your special moments unforgettable</p>
     </div>
     <div class="footer-section">
       <h3>Contact Us</h3>
-      <p>Phone: (555) 123-4567</p>
-      <p>Email: info@eventelegance.com</p>
+      <p>Phone: (385) 296-5634</p>
+      <p>Email: siassiasoukimiaanota@gmail.com</p>
     </div>
     <div class="footer-section">
       <h3>Follow Us</h3>
@@ -22,6 +22,6 @@ let year = d.getFullYear()
     </div>
   </div>
   <div class="footer-bottom">
-    <p class="copyright">&copy; <%= year %>, EventElegance. All Rights Reserved.</p>
+    <p class="copyright">&copy; <%= year %>, Eventkitoko. All Rights Reserved.</p>
   </div>
 </footer>
