--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header id="top-header">
     <span class="siteName">
-        <a href="/" title="Return to the home page">EventElegance</a>
+        <a href="/" title="Return to the home page">Eventkitoko</a>
     </span>
     <div id="tools">
         <% if(locals.loggedin) { %>
